--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,12 +20,12 @@ body {
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif; 
 }
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
  main {
-  background-color: #f4f1ec;
   display: flex;
   flex-direction: column;
   /* align-content: flex-end; */
