--- a/public/styles/tweet-list.css
+++ b/public/styles/tweet-list.css
@@ -2,21 +2,29 @@
   border: 5px solid black;
   display: flex;
   flex-direction: column;
-  padding: 15px;
-  margin-top: 15px;
+  padding: 1em;
+  margin-top: 1em;
+
+  font-size: 20px;
+  word-wrap: break-word;
 }
 
 .tweet-list-article:hover {
-
   box-shadow: 10px 10px black;
-
   display: block;
 }
 
 .tweet-list-header {
+  background-color: #f4f1ec;
+  
   display: flex;
   flex-direction: row;
-justify-content: space-between;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  margin-top: 0em;
+  padding-top: 0em;
+
 }
 
 .tweet-list-footer {
@@ -28,15 +36,24 @@ justify-content: space-between;
 }
 
 .tweet-list-image {
-  height: 50px;
-  width: 50px;
+  height: 1.5em;
+  width: 1.5em;
+  margin: 0em;
 
 }
 
 .tweet-list-name {
-flex-grow: 1;
-margin-left: 15px;
+  display: flex;
+  flex-grow: 1;
+  margin: 0.3em 0em 0.5em 0.5em;
 
+
+}
+.tweet-list-handle {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin: 0.3em 0em;
 }
 
 .tweet-list-time {
@@ -47,8 +64,13 @@ margin-left: 15px;
 }
 
 .tweet-list-icons i{
-  margin-right: 5px;
+  margin-top: 1em;
+  margin-right: 5px
 
+}
+
+.tweet-list-icons i:hover {
+  color:#4056A1;
 }
 
 .tweet-list-icons.fas {
